# LLM_persona

./: .gitignore  README.md  config.yaml  main.py  main_closed.py  main_open.py  pyproject.toml  requirements.txt  test.sh
data/: bfi.txt  prompts.json
data/activation/: prompt.json  vector.json
data/tasks/: social_scenario.json
data/vectors/: README.md
scripts/: aggregate_results.py  compare_activation_outputs.py  debug_bfi_output.py
src/activation/: __init__.py  persona_vector.py  prompt_activation.py
src/models/: __init__.py  api_model.py  base.py  local_model.py  registry.py
src/runner/: __init__.py  experiment_runner.py
src/scoring/: __init__.py  bragging_judge.py  llm_judge.py
src/tasks/: __init__.py  base.py  bfi_task.py  bragging_generation_task.py  generation_task.py
src/utils/: __init__.py  config.py  helpers.py
