[project]
name = "code2"
version = "0.1.0"
description = "LLM personality experiment framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "accelerate>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
